--- a/source/sass/global/_colors.scss
+++ b/source/sass/global/_colors.scss
@@ -5,13 +5,14 @@
 
 $colors: (
     primary: (
-
+        dark: #0B0B0B,
+        light: #3E3E3E,
     ),
     secondary: (
-
+        base: #81D8D0,
     ),
     accent: (
-
+        base: #44EB9B,
     ),
     btow: (
         1000: hsl(0, 0%, 3%),
